# si_base_units_relationships_poster_recreate

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: docs.yml
data/: units.csv
notebooks/: main.ipynb
notebooks-plotnine-contest-2024/: main.ipynb
si_base_units_relationships_poster_recreate/utils/: logger.py
tests/: __init__.py  test_true.py
